--- a/index.html
+++ b/index.html
@@ -244,11 +244,13 @@ footer{
           único campo o disciplina concreta, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse a
           distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
           estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
-          del diseño. Cuento con una formación profesional en electricidad, que me ha proporcionado una base técnica
-          sólida y una forma de pensar práctica y estructurada, complementada por una sensibilidad estética y una
-          atención constante al detalle. Disfruto del proceso de diseño desde el análisis inicial hasta la
-          materialización final, entendiendo cada proyecto como una oportunidad para aprender, adaptarse al contexto
-          y desarrollar soluciones coherentes, funcionales y honestas.
+          del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
+          la Universitat Jaume I de Castellón, y he complementado mi trayectoria académica con un programa Erasmus en
+          la Middlesex University de Londres. Además, cuento con una formación profesional en electricidad, que me ha
+          proporcionado una base técnica sólida y una forma de pensar práctica y estructurada. Disfruto del proceso
+          de diseño desde el análisis inicial hasta la materialización final, entendiendo cada proyecto como una
+          oportunidad para aprender, adaptarse al contexto y desarrollar soluciones coherentes, funcionales y
+          honestas.
         </p>
       </div>
 
