--- a/index.html
+++ b/index.html
@@ -241,16 +241,15 @@ footer{
       <div class="about-text reveal">
         <p>
           Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona enfocada en un
-          único campo o disciplina concreta, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse a
+          único campo o disciplina concreta, sino alguien con un perfil ecléctico y flexible, capaz de adaptarse a
           distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
           estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
           del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
           la Universitat Jaume I de Castellón, y he complementado mi trayectoria académica con un programa Erasmus en
           la Middlesex University de Londres. Además, cuento con una formación profesional en electricidad, que me ha
           proporcionado una base técnica sólida y una forma de pensar práctica y estructurada. Disfruto del proceso
-          de diseño desde el análisis inicial hasta la materialización final, entendiendo cada proyecto como una
-          oportunidad para aprender, adaptarse al contexto y desarrollar soluciones coherentes, funcionales y
-          honestas.
+          de diseño desde el análisis inicial hasta la materialización final, desarrollando soluciones coherentes,
+          funcionales y honestas, siempre adaptadas al contexto y a las personas.
         </p>
       </div>
 
