--- a/index.html
+++ b/index.html
@@ -245,11 +245,10 @@ footer{
           distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
           estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
           del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
-          la Universitat Jaume I de Castellón, y he complementado mi trayectoria académica con un programa Erasmus en
-          la Middlesex University de Londres. Además, cuento con una formación profesional en electricidad, que me ha
-          proporcionado una base técnica sólida y una forma de pensar práctica y estructurada. Disfruto del proceso
-          de diseño desde el análisis inicial hasta la materialización final, desarrollando soluciones coherentes,
-          funcionales y honestas, siempre adaptadas al contexto y a las personas.
+          la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
+          Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
+          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde el análisis inicial hasta la
+          materialización final, desarrollando soluciones coherentes, funcionales y honestas.
         </p>
       </div>
 
