--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ footer{
           del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
           la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
           Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
-          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde el análisis inicial hasta la
-          materialización final, desarrollando soluciones coherentes, funcionales y honestas.
+          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde el análisis hasta la
+          materialización, creando soluciones coherentes y funcionales.
         </p>
       </div>
 
