--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ footer{
           del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
           la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
           Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
-          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde el análisis hasta la
+          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde lo conceptual hasta la
           materialización, mediante soluciones coherentes.
         </p>
       </div>
