--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ footer{
           la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
           Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
           sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde lo conceptual hasta la
-          materialización, mediante soluciones coherentes.
+          materialización, con soluciones coherentes.
         </p>
       </div>
 
