--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ p{
 }
 
 .about-photo img{
-  width:290px;
+  width:288px;   /* ⬅ ajuste solicitado */
   height:auto;
   border-radius:0;
   filter:grayscale(100%) contrast(1.05);
