--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
-/* ===== BACKGROUND ===== */
-canvas{
-  position:fixed;
-  inset:0;
-  z-index:-1;
-}
-
 /* ===== CURSOR ===== */
 .cursor{
   position:fixed;
@@ -70,7 +63,6 @@ nav span{
   color:#ccc;
   cursor:pointer;
   transition:.4s;
-  padding-top:6px;
 }
 
 nav span:hover{ color:#fff; }
@@ -84,27 +76,7 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
-/* ===== HERO ===== */
-.section:first-of-type .content-center{
-  margin-top:-70px;
-}
-
-/* ===== CONTACTO ===== */
-.section.contact{
-  padding-top:120px;
-}
-
-.section.contact .content-left{
-  margin-top:-165px;
-}
-
 /* ===== CONTENT ===== */
-.content-center{
-  max-width:900px;
-  text-align:left;
-  margin-left:1vw;
-}
-
 .content-left{
   max-width:900px;
   width:100%;
@@ -118,84 +90,53 @@ h1{
   line-height:1.05;
 }
 
-.content-center h1{
-  font-size:clamp(84px,7vw,140px);
-}
-
 p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
   max-width:480px;
   line-height:1.6;
-  margin-left:0.35vw;
   text-align:justify;
 }
 
-/* ===== ABOUT ===== */
-.about{
-  display:block;
+/* ===== CONTACT ===== */
+.contact{
+  padding-top:120px;
 }
 
-.about-title{
-  margin-bottom:2px;
-}
-
-.about-content{
+.contact-wrapper{
+  margin-top:40px;
   display:flex;
-  align-items:flex-start;
-  gap:32px;
+  flex-direction:column;
+  gap:22px;
 }
 
-.about-text{
-  max-width:480px;
+.contact-item{
+  font-size:15px;
+  letter-spacing:.02em;
+  color:#aaa;
+  display:flex;
+  align-items:center;
+  gap:14px;
+  cursor:pointer;
+  transition:.35s cubic-bezier(.2,.7,.1,1);
 }
 
-.about-photo{
-  flex-shrink:0;
-  margin-top:23px;
+.contact-item span{
+  font-size:13px;
+  letter-spacing:.18em;
+  color:#666;
+  min-width:80px;
 }
 
-.about-photo img{
-  width:288px;   /* ⬅ ajuste solicitado */
-  height:auto;
-  border-radius:0;
-  filter:grayscale(100%) contrast(1.05);
-  opacity:0.9;
+.contact-item a{
+  color:inherit;
+  text-decoration:none;
 }
 
-/* ===== REVEAL ===== */
-.reveal{
-  opacity:0;
-  transform:translateY(60px);
-  filter:blur(8px);
-  transition:1.2s cubic-bezier(.2,.7,.1,1);
-}
-
-.reveal.visible{
-  opacity:1;
-  transform:translateY(0);
-  filter:blur(0);
-}
-
-/* ===== RESPONSIVE ===== */
-@media(max-width:900px){
-  .about-content{
-    flex-direction:column;
-    gap:40px;
-  }
-
-  .about-title{
-    margin-bottom:10px;
-  }
-
-  .about-photo{
-    margin-top:0;
-  }
-
-  .about-photo img{
-    width:240px;
-  }
+.contact-item:hover{
+  color:#fff;
+  transform:translateX(6px);
 }
 
 /* ===== FOOTER ===== */
@@ -222,65 +163,37 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- INICIO -->
-<section class="section">
-  <div class="content-center">
-    <h1 id="heroTitle"></h1>
-    <p class="reveal">Diseño industrial con enfoque arquitectónico y precisión estructural.</p>
-  </div>
-</section>
-
-<!-- SOBRE MI -->
-<section class="section">
-  <div class="content-left about">
-
-    <h1 class="reveal about-title">Sobre mí</h1>
-
-    <div class="about-content">
-
-      <div class="about-text reveal">
-        <p>
-          Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona enfocada en un
-          único campo o disciplina concreta, sino alguien con un perfil ecléctico y flexible, capaz de adaptarse a
-          distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
-          estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
-          del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
-          la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
-          Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
-          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde lo conceptual hasta la
-          producción final, con soluciones consistentes.
-        </p>
-      </div>
-
-      <div class="about-photo reveal">
-        <img src="foto.jpg" alt="Foto personal de Luis Blasco">
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- PORTFOLIO -->
-<section class="section">
-  <div class="content-left">
-    <h1 class="reveal">Portfolio</h1>
-    <p class="reveal">Selección de proyectos de diseño industrial.</p>
-  </div>
-</section>
-
-<!-- CV -->
-<section class="section">
-  <div class="content-left">
-    <h1 class="reveal">CV</h1>
-    <p class="reveal">Formación académica y experiencia profesional.</p>
-  </div>
-</section>
-
 <!-- CONTACTO -->
 <section class="section contact">
   <div class="content-left">
-    <h1 class="reveal">Contacto</h1>
-    <p class="reveal">luis.blasco@email.com</p>
+
+    <h1>Contacto</h1>
+
+    <div class="contact-wrapper">
+
+      <div class="contact-item">
+        <span>LINKEDIN</span>
+        <a href="https://www.linkedin.com/in/tuusuario" target="_blank">
+          linkedin.com/in/tuusuario
+        </a>
+      </div>
+
+      <div class="contact-item">
+        <span>EMAIL</span>
+        <a href="mailto:luis.blasco@email.com">
+          luis.blasco@email.com
+        </a>
+      </div>
+
+      <div class="contact-item">
+        <span>TEL</span>
+        <a href="tel:+34600123456">
+          +34 600 123 456
+        </a>
+      </div>
+
+    </div>
+
   </div>
 </section>
 
@@ -311,67 +224,6 @@ addEventListener("mousemove",e=>{
   cursor.style.top=y+"px";
   requestAnimationFrame(animateCursor);
 })();
-
-/* ===== HERO TEXT ===== */
-const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((char,i)=>{
-  const span=document.createElement("span");
-  span.textContent=char;
-  span.style.opacity=0;
-  span.style.display="inline-block";
-  span.style.transform="translateY(40px)";
-  span.style.filter="blur(8px)";
-  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  hero.appendChild(span);
-});
-
-setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(span=>{
-    span.style.opacity=1;
-    span.style.transform="translateY(0)";
-    span.style.filter="blur(0)";
-  });
-},200);
-
-/* ===== REVEAL ===== */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(e.isIntersecting){
-      e.target.classList.add("visible");
-    }
-  });
-},{threshold:.2});
-
-document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
-
-/* ===== NAVIGATION ===== */
-document.querySelectorAll("nav span").forEach(btn=>{
-  btn.addEventListener("click",()=>{
-    const index=btn.dataset.scroll;
-
-    if(index==="0"){
-      window.scrollTo({top:0,behavior:"smooth"});
-      return;
-    }
-
-    if(index==="4"){
-      window.scrollTo({
-        top:document.documentElement.scrollHeight,
-        behavior:"smooth"
-      });
-      return;
-    }
-
-    const section=document.querySelectorAll(".section")[index];
-    const title=section.querySelector("h1");
-    const offset=180;
-
-    window.scrollTo({
-      top:title.offsetTop-offset,
-      behavior:"smooth"
-    });
-  });
-});
 
 </script>
 
