--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
+/* ===== BACKGROUND ===== */
+canvas{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+}
+
 /* ===== CURSOR ===== */
 .cursor{
   position:fixed;
@@ -63,6 +70,7 @@ nav span{
   color:#ccc;
   cursor:pointer;
   transition:.4s;
+  padding-top:6px;
 }
 
 nav span:hover{ color:#fff; }
@@ -76,15 +84,31 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
+/* ===== HERO ===== */
+.section:first-of-type .content-center{
+  margin-top:-70px;
+}
+
+/* ===== CONTACTO ===== */
+.section.contact{
+  padding-top:120px;
+}
+
+.section.contact .content-left{
+  margin-top:-165px;
+}
+
 /* ===== CONTENT ===== */
+.content-center{
+  max-width:900px;
+  text-align:left;
+  margin-left:1vw;
+}
+
 .content-left{
   max-width:900px;
   width:100%;
   margin-left:6vw;
-}
-
-.content-center{
-  max-width:900px;
 }
 
 /* ===== TYPO ===== */
@@ -94,73 +118,60 @@ h1{
   line-height:1.05;
 }
 
+.content-center h1{
+  font-size:clamp(84px,7vw,140px);
+}
+
 p{
   margin-top:18px;
   font-size:15px;
   color:#aaa;
   max-width:480px;
   line-height:1.6;
+  margin-left:0.35vw;
   text-align:justify;
 }
 
+.contact p a{
+  color:#aaa;
+  text-decoration:none;
+  transition:.3s;
+}
+
+.contact p a:hover{
+  color:#fff;
+}
+
 /* ===== ABOUT ===== */
+.about{
+  display:block;
+}
+
+.about-title{
+  margin-bottom:2px;
+}
+
 .about-content{
   display:flex;
   align-items:flex-start;
   gap:32px;
 }
 
-.about-text{ max-width:480px; }
+.about-text{
+  max-width:480px;
+}
 
 .about-photo{
+  flex-shrink:0;
   margin-top:23px;
 }
 
 .about-photo img{
   width:288px;
+  height:auto;
+  border-radius:0;
   filter:grayscale(100%) contrast(1.05);
-  opacity:.9;
-}
-
-/* ===== CONTACT ===== */
-.contact{
-  padding-top:120px;
-}
-
-.contact-wrapper{
-  display:flex;
-  flex-direction:column;
-  gap:36px;
-}
-
-.contact-list{
-  display:flex;
-  flex-direction:column;
-  gap:18px;
-}
-
-.contact-item{
-  display:flex;
-  align-items:center;
-  gap:16px;
-  font-size:15px;
-  color:#aaa;
-  text-decoration:none;
-  width:fit-content;
-  transition:.35s;
-}
-
-.contact-item span{
-  font-size:11px;
-  letter-spacing:.25em;
-  text-transform:uppercase;
-  color:#777;
-  min-width:90px;
-}
-
-.contact-item:hover{
-  color:#fff;
-  transform:translateX(6px);
+  opacity:0.9;
 }
 
 /* ===== REVEAL ===== */
@@ -175,6 +186,26 @@ p{
   opacity:1;
   transform:translateY(0);
   filter:blur(0);
+}
+
+/* ===== RESPONSIVE ===== */
+@media(max-width:900px){
+  .about-content{
+    flex-direction:column;
+    gap:40px;
+  }
+
+  .about-title{
+    margin-bottom:10px;
+  }
+
+  .about-photo{
+    margin-top:0;
+  }
+
+  .about-photo img{
+    width:240px;
+  }
 }
 
 /* ===== FOOTER ===== */
@@ -211,53 +242,59 @@ footer{
 
 <!-- SOBRE MI -->
 <section class="section">
-  <div class="content-left">
+  <div class="content-left about">
 
-    <h1 class="reveal">Sobre mí</h1>
+    <h1 class="reveal about-title">Sobre mí</h1>
 
-    <div class="about-content reveal">
-      <div class="about-text">
+    <div class="about-content">
+
+      <div class="about-text reveal">
         <p>
-          Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico y flexible, con formación
-          en la Universidad Politécnica de Valencia, inicio en la Universitat Jaume I y un Erasmus en la Middlesex
-          University de Londres. Cuento además con una FP en electricidad, lo que refuerza mi enfoque técnico.
-          Disfruto del proceso de diseño desde lo conceptual hasta la producción final, con soluciones consistentes.
+          Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona enfocada en un
+          único campo o disciplina concreta, sino alguien con un perfil ecléctico y flexible, capaz de adaptarse a
+          distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
+          estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
+          del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
+          la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
+          Londres. Cuento además con una formación profesional en electricidad, que me ha aportado una base técnica
+          sólida y una forma de pensar práctica. Disfruto del proceso de diseño desde lo conceptual hasta la
+          producción final, con soluciones consistentes.
         </p>
       </div>
 
-      <div class="about-photo">
-        <img src="foto.jpg" alt="Foto personal">
+      <div class="about-photo reveal">
+        <img src="foto.jpg" alt="Foto personal de Luis Blasco">
       </div>
-    </div>
 
+    </div>
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="section">
+  <div class="content-left">
+    <h1 class="reveal">Portfolio</h1>
+    <p class="reveal">Selección de proyectos de diseño industrial.</p>
+  </div>
+</section>
+
+<!-- CV -->
+<section class="section">
+  <div class="content-left">
+    <h1 class="reveal">CV</h1>
+    <p class="reveal">Formación académica y experiencia profesional.</p>
   </div>
 </section>
 
 <!-- CONTACTO -->
 <section class="section contact">
-  <div class="content-left contact-wrapper">
-
+  <div class="content-left">
     <h1 class="reveal">Contacto</h1>
-
-    <div class="contact-list reveal">
-
-      <a class="contact-item" href="https://www.linkedin.com/in/tuusuario" target="_blank">
-        <span>LinkedIn</span>
-        linkedin.com/in/tuusuario
-      </a>
-
-      <a class="contact-item" href="mailto:tucorreo@gmail.com">
-        <span>Email</span>
-        tucorreo@gmail.com
-      </a>
-
-      <a class="contact-item" href="tel:+34600000000">
-        <span>Teléfono</span>
-        +34 600 000 000
-      </a>
-
-    </div>
-
+    <p class="reveal">
+      <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a><br>
+      <a href="mailto:tucorreo@gmail.com">tucorreo@gmail.com</a><br>
+      <a href="tel:+34600000000">+34 600 000 000</a>
+    </p>
   </div>
 </section>
 
@@ -268,58 +305,85 @@ footer{
 <script>
 
 /* ===== ENTRADA ===== */
-window.addEventListener("load",()=>document.body.style.opacity="1");
+window.addEventListener("load",()=>{
+  document.body.style.opacity="1";
+});
 
 /* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
-let x=0,y=0,mx=0,my=0;
+let mx=0,my=0,x=0,y=0;
 
 addEventListener("mousemove",e=>{
   mx=e.clientX;
   my=e.clientY;
 });
 
-(function loop(){
+(function animateCursor(){
   x+=(mx-x)*0.2;
   y+=(my-y)*0.2;
   cursor.style.left=x+"px";
   cursor.style.top=y+"px";
-  requestAnimationFrame(loop);
+  requestAnimationFrame(animateCursor);
 })();
 
 /* ===== HERO TEXT ===== */
 const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((c,i)=>{
-  const s=document.createElement("span");
-  s.textContent=c;
-  s.style.opacity=0;
-  s.style.display="inline-block";
-  s.style.transform="translateY(40px)";
-  s.style.filter="blur(8px)";
-  s.style.transition=`.5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  hero.appendChild(s);
+"Industrial Design".split("").forEach((char,i)=>{
+  const span=document.createElement("span");
+  span.textContent=char;
+  span.style.opacity=0;
+  span.style.display="inline-block";
+  span.style.transform="translateY(40px)";
+  span.style.filter="blur(8px)";
+  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  hero.appendChild(span);
 });
 
 setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(s=>{
-    s.style.opacity=1;
-    s.style.transform="translateY(0)";
-    s.style.filter="blur(0)";
+  hero.querySelectorAll("span").forEach(span=>{
+    span.style.opacity=1;
+    span.style.transform="translateY(0)";
+    span.style.filter="blur(0)";
   });
 },200);
 
 /* ===== REVEAL ===== */
-const obs=new IntersectionObserver(e=>{
-  e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible"));
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      e.target.classList.add("visible");
+    }
+  });
 },{threshold:.2});
 
-document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
 
-/* ===== NAV ===== */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>window.scrollTo({
-    top:document.querySelectorAll(".section")[i].offsetTop-120,
-    behavior:"smooth"
+/* ===== NAVIGATION ===== */
+document.querySelectorAll("nav span").forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    const index=btn.dataset.scroll;
+
+    if(index==="0"){
+      window.scrollTo({top:0,behavior:"smooth"});
+      return;
+    }
+
+    if(index==="4"){
+      window.scrollTo({
+        top:document.documentElement.scrollHeight,
+        behavior:"smooth"
+      });
+      return;
+    }
+
+    const section=document.querySelectorAll(".section")[index];
+    const title=section.querySelector("h1");
+    const offset=180;
+
+    window.scrollTo({
+      top:title.offsetTop-offset,
+      behavior:"smooth"
+    });
   });
 });
 
