--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
   z-index:1000;
 }
 
-/* ===== HEADER ===== */
+/* ===== NAV ===== */
 nav{
   position:fixed;
   top:0;
@@ -51,7 +51,7 @@ nav{
   justify-content:center;
   align-items:center;
   gap:50px;
-  background:rgba(10,10,10,0.4);
+  background:rgba(10,10,10,.4);
   backdrop-filter:blur(12px);
   z-index:100;
 }
@@ -76,7 +76,17 @@ nav span:hover{ color:#fff; }
   padding:120px 10% 0;
 }
 
+/* ===== HERO ===== */
+.section:first-of-type .content-center{
+  margin-top:-70px;
+}
+
 /* ===== CONTENT ===== */
+.content-center{
+  max-width:900px;
+  margin-left:1vw;
+}
+
 .content-left{
   max-width:900px;
   width:100%;
@@ -88,6 +98,10 @@ h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
+}
+
+.content-center h1{
+  font-size:clamp(84px,7vw,140px);
 }
 
 p{
@@ -110,21 +124,22 @@ p{
 
 .about-photo{
   margin-top:23px;
+  flex-shrink:0;
 }
 
 .about-photo img{
   width:288px;
   filter:grayscale(100%) contrast(1.05);
-  opacity:0.9;
+  opacity:.9;
 }
 
-/* ===== CONTACT (EDITORIAL) ===== */
+/* ===== CONTACT EDITORIAL ===== */
 .contact-block{
   margin-top:28px;
 }
 
 .contact-item{
-  margin-bottom:22px;
+  margin-bottom:24px;
 }
 
 .contact-label{
@@ -184,9 +199,18 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
+<!-- HERO -->
+<section class="section">
+  <div class="content-center">
+    <h1 id="heroTitle"></h1>
+    <p class="reveal">Diseño industrial con enfoque arquitectónico y precisión estructural.</p>
+  </div>
+</section>
+
 <!-- SOBRE MI -->
 <section class="section">
   <div class="content-left">
+
     <h1 class="reveal">Sobre mí</h1>
 
     <div class="about-content reveal">
@@ -194,10 +218,12 @@ footer{
         <p>
           Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona enfocada en un
           único campo o disciplina concreta, sino alguien con un perfil ecléctico y flexible, capaz de adaptarse a
-          distintos entornos y formas de trabajo. He cursado mis estudios en la Universidad Politécnica de Valencia,
-          tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en
-          la Middlesex University de Londres. Cuento además con una formación profesional en electricidad.
-          Disfruto del proceso de diseño desde lo conceptual hasta la producción final, con soluciones consistentes.
+          distintos entornos y formas de trabajo. No me sitúo ni en un extremo puramente artístico ni en uno
+          estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones
+          del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia, tras iniciar mi formación en
+          la Universitat Jaume I de Castellón, y completarlos con un programa Erasmus en la Middlesex University de
+          Londres. Cuento además con una formación profesional en electricidad. Disfruto del proceso de diseño desde
+          lo conceptual hasta la producción final, con soluciones consistentes.
         </p>
       </div>
 
@@ -205,11 +231,28 @@ footer{
         <img src="foto.jpg" alt="Foto personal">
       </div>
     </div>
+
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="section">
+  <div class="content-left">
+    <h1 class="reveal">Portfolio</h1>
+    <p class="reveal">Selección de proyectos de diseño industrial.</p>
+  </div>
+</section>
+
+<!-- CV -->
+<section class="section">
+  <div class="content-left">
+    <h1 class="reveal">CV</h1>
+    <p class="reveal">Formación académica y experiencia profesional.</p>
   </div>
 </section>
 
 <!-- CONTACTO -->
-<section class="section contact">
+<section class="section">
   <div class="content-left">
 
     <h1 class="reveal">Contacto</h1>
@@ -249,14 +292,17 @@ footer{
 
 <script>
 
-/* ===== ENTRADA ===== */
+/* ===== LOAD ===== */
 window.addEventListener("load",()=>{ document.body.style.opacity="1"; });
 
 /* ===== CURSOR ===== */
 const cursor=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0;
 
-addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
+addEventListener("mousemove",e=>{
+  mx=e.clientX;
+  my=e.clientY;
+});
 
 (function animateCursor(){
   x+=(mx-x)*0.2;
@@ -266,12 +312,47 @@ addEventListener("mousemove",e=>{ mx=e.clientX; my=e.clientY; });
   requestAnimationFrame(animateCursor);
 })();
 
+/* ===== HERO TEXT ===== */
+const hero=document.getElementById("heroTitle");
+"Industrial Design".split("").forEach((c,i)=>{
+  const s=document.createElement("span");
+  s.textContent=c;
+  s.style.opacity=0;
+  s.style.display="inline-block";
+  s.style.transform="translateY(40px)";
+  s.style.filter="blur(8px)";
+  s.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  hero.appendChild(s);
+});
+
+setTimeout(()=>{
+  hero.querySelectorAll("span").forEach(s=>{
+    s.style.opacity=1;
+    s.style.transform="translateY(0)";
+    s.style.filter="blur(0)";
+  });
+},200);
+
 /* ===== REVEAL ===== */
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{ if(e.isIntersecting) e.target.classList.add("visible"); });
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add("visible");
+  });
 },{threshold:.2});
 
 document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+
+/* ===== NAV ===== */
+document.querySelectorAll("nav span").forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    const i=btn.dataset.scroll;
+    const sections=document.querySelectorAll(".section");
+    window.scrollTo({
+      top:sections[i].offsetTop-180,
+      behavior:"smooth"
+    });
+  });
+});
 
 </script>
 
